--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <li>
             <a href="./recipes/lasagna.html" target="_self" rel="noopener noreferrer">Lasagna Recipes</a>
         </li>
+        <li>
+            <a href="#">kake Recipes</a>
+        </li>
     </ul>
     
     
